# CheckEng

./: LICENSE  README.md  run.but
checkeng/: .gitignore  CMakeLists.txt  context.h  en.ts  main.cpp  main_window.cpp  main_window.h  main_window.ui  task.h
checkeng/dialogs/: CMakeLists.txt
checkeng/dialogs/about/: CMakeLists.txt  about.cpp  about.h  about.ui
checkeng/dialogs/add_questions/: CMakeLists.txt  add_questions.cpp  add_questions.h  add_questions.ui  add_questions_global.h
checkeng/dialogs/add_tasks/: CMakeLists.txt  add_tasks.cpp  add_tasks.h  add_tasks.ui  add_tasks_global.h
checkeng/dialogs/add_tasks2/: CMakeLists.txt  add_tasks2.cpp  add_tasks2.h  add_tasks2.ui  add_tasks2_global.h
checkeng/dialogs/choose/: CMakeLists.txt  choose.cpp  choose.h  choose.ui  choose_global.h
checkeng/dialogs/finish/: CMakeLists.txt  finish.cpp  finish.h  finish.ui  finish_global.h
checkeng/dialogs/language/: CMakeLists.txt  language.cpp  language.h  language.ui  language_global.h
checkeng/dialogs/test1/: CMakeLists.txt  task.h  test1.cpp  test1.h  test1.ui  test1_global.h
checkeng/dialogs/test2/: CMakeLists.txt  test2.cpp  test2.h  test2.ui  test2_global.h
checkeng/include/: answer.h  app.h  checkbox_algo.h  checker.h  email_validator.h  english_validator.h  integer.h  language.h  login_validator.h  num_validator.h  pass_validator.h  port_validator.h  program.h  settings.h  settings_pathes.h  string.h  string_algo.h  strong_int_validator.h  tr.h
checkeng/install/: install.nsi
checkeng/install/checkeng_tests/test1/: Elementary  Intermediate
checkeng/install/checkeng_tests/test2/{4e234ff3-1f11-4695-a110-ce96e84290c0}/: index.txt
checkeng/install/checkeng_tests/test2/{7a8892f9-f7a5-438f-b836-b703bd651a0c}/: index.txt
checkeng/install/checkeng_tests/test2/{e356f998-b9e0-4474-b035-b79213f111fd}/: index.txt
checkeng/login/: login.cpp  login.h  login.ui
checkeng/one_of_three/: one_of_three.cpp  one_of_three.h  one_of_three.ui
checkeng/resources/css/css/: style.css
checkeng/resources/images/: svg.qrc
checkeng/resources/langs/: en.ts  ru.ts
